RESOLVED FIXED278797
[Cocoa] Watchtime logging is incorrectly reporting "StoredStream" for HLS playback
https://bugs.webkit.org/show_bug.cgi?id=278797
Summary [Cocoa] Watchtime logging is incorrectly reporting "StoredStream" for HLS pla...
Jer Noble
Reported 2024-08-28 10:39:41 PDT
[Cocoa] Watchtime logging is incorrectly reporting "StoredStream" for HLS playback
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-28 10:39:53 PDT
Jer Noble
Comment 2 2024-08-28 11:33:24 PDT
EWS
Comment 3 2024-08-28 14:52:29 PDT
Committed 282869@main (5a7e00de7d8c): <https://commits.webkit.org/282869@main> Reviewed commits have been landed. Closing PR #32840 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.