[Cocoa] Watchtime logging is incorrectly reporting "StoredStream" for HLS playback https://bugs.webkit.org/show_bug.cgi?id=278797 rdar://134865058

Reviewed by Andy Estes.

Fix a mismatch when translating between two different load type enums, and also
change the load type reported from MediaPlayerPrivateAVFoundation when a single-variant
media file with infinite duration is loaded.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::sourceType const):
* Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
(WebCore::MediaPlayerPrivateAVFoundation::movieLoadType const):

Canonical link: https://commits.webkit.org/282869@main